Renamed Array.cpp to Array.tpp

--- a/Assignment1.vcxproj
+++ b/Assignment1.vcxproj
@@ -76,13 +76,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Array.cpp" />
     <ClCompile Include="Exception.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
     <ClInclude Include="Exception.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Array.tpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
